# gcc_pulgin

./: .gitignore  CMakeLists.txt
example/: CMakeLists.txt  example.cpp  function.h
skywalker-gcc-plugin/: CMakeLists.txt  SkywalkerPlugin.cpp  SkywalkerPlugin.h  skywalker-gcc-plugin.cpp
skywalker-gcc-plugin/include/: IPluginAbility.h  gcc_plugin.h
skywalker-gcc-plugin/plugin-ability/: IPluginAbility.h  PluginAbility.cpp  PluginAbility.h
skywalker-gcc-plugin/plugin-ability/function-count/: PluginAbility_FunctionCount.cpp  PluginAbility_FunctionCount.h
skywalker-gcc-plugin/plugin-ability/plugin-callback-test/: PluginAbility_PluginCallbackTest.cpp  PluginAbility_PluginCallbackTest.h
